Polish change password page

--- a/tasks/templates/password.html
+++ b/tasks/templates/password.html
@@ -1,15 +1,23 @@
 {% extends 'base_content.html' %}
 {% block content %}
-<div class="container mt-3">
-  <div class="row">
-    <div class="col-12">
-      <h1>Change password</h1>
-      <form action="{% url 'password' %}" method="post">
-        {% csrf_token %}
-        {% include 'partials/bootstrap_form.html' with form=form %}
-        <input type="submit" value="Change password" class="btn btn-primary">
-      </form>
+    {% load static %}
+    {% load widget_tweaks %}
+    <link href="{% static 'css/password_and_profile.css' %}" rel="stylesheet">
+    <div class="mainContainer">
+        <div class="formContainer">
+            <form action="{% url 'password' %}" method="post">
+                {% csrf_token %}
+                <hggroup class="text-start">
+                    <h1>Change Password</h1>
+                </hggroup>
+                <br>
+                {{ form.as_div }}
+                <br>
+                <button type="submit" class=button id="btn-submit">
+                    <span class="button-text">Change password</span>
+                </button>
+            </form>
+        </div>
     </div>
-  </div>
-</div>
+    <script src="{% static 'js/form_input_label_handler.js' %}"></script>
 {% endblock %}
