--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -27,10 +27,10 @@
                     {% for upload in uploads %}
                     <div class="flex-column flex-md-row list-item" aria-current="true">
                         <div class="text-list-item p-3 gap-2 w-100">
-                            <form method="post" action="{%  url 'pdf_viewer' %}" class="d-inline" target="_blank" id="viewerForm">
+                            <form method="post" action="{%  url 'pdf_viewer' %}" class="d-inline" target="_blank" id="viewerForm{{ upload.id }}">
                                 {% csrf_token %}
                                 <input type="hidden" name="upload_id" value="{{ upload.id }}">
-                                    <a href="#" onclick="document.getElementById('viewerForm{}').submit();return false;" style="text-decoration: none">
+                                    <a href="#" onclick="document.getElementById('viewerForm{{ upload.id }}').submit();return false;" style="text-decoration: none">
                                         <div class="item-content">
                                         <div class="d-flex flex-wrap w-100 justify-content-between align-items-center">
                                             <div class="mb-1">
