--- a/static/css/password_and_profile.css
+++ b/static/css/password_and_profile.css
@@ -67,7 +67,7 @@ form > div {
     margin-bottom: 2rem;
 }
 
-label {
+.mainContainer label {
     color: var(--gray-tint-40);
     position: absolute;
     left: 0;
@@ -76,7 +76,7 @@ label {
     cursor: pointer;
 }
 
-input {
+.mainContainer input {
     border: none;
     border-bottom: 1px solid var(--gray-tint-40);
     height: 2.25rem;
@@ -85,8 +85,15 @@ input {
     transition: border-color 0.3s ease;
 }
 
-input:focus {
+.mainContainer input:focus {
     border-color: var(--gray-base);
+}
+
+.mainContainer .errorlist{
+  display: block;
+  margin-top: 0.5rem;
+  font-size: 0.8rem;
+  color: red;
 }
 
 a {
