--- a/tasks/templates/log_in.html
+++ b/tasks/templates/log_in.html
@@ -18,7 +18,7 @@
                 <br>
                 {{ form.as_div }}
                 <br>
-                <button type="submit" class=button id="btn-submit">
+                <button type="submit" class=button id="btn-submit" name="">
                     <span class="button-text">Log In</span>
                 </button>
             </form>
