--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -88,7 +88,8 @@ ul.errorlist {
 
 .profile-text {
   overflow:hidden;
-  padding-left:20px
+  padding-left:20px;
+  padding-top:20px;
 }
 
 h3.profile-title {
@@ -352,11 +353,11 @@ Fade in transition
     cursor: pointer;
 }
 
-.input-file label {
+#popupContainer .input-file label {
     cursor: pointer;
 }
 
-.input-file input[type="file"] {
+#popupContainer .input-file input[type="file"] {
     opacity: 0;
     width: 0.1px;
     height: 0.1px;
