--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -5,6 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'css/viewer.css'%}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.0.379/pdf_viewer.min.css" />
 <link rel="stylesheet" href="{% static 'css/voice_comments.css'%}">
@@ -43,50 +44,74 @@
 				<div id="outlineView"></div>
 
 				<div id="commentView">
-					<p id="testComment" class="centered-text">Select a mark to leave a comment</p>
-					<div id="voiceRecordContainer">
 
-						<!-- Voice Recording Section -->
-						<div id="voiceRecord">
-							<div id="playCircle">
-								<i id="play" class="fas fa-play" title="Start Recording"></i>
-							</div>
-							<div title="Recording...">
-								<div class="animation-block block-1"></div>
-								<div class="animation-block block-2"></div>
-								<div class="animation-block block-3"></div>
-							</div>
-						</div>
-
-						<!-- Current Voice Comments Section -->
-						<div id="recordings"></div>
-						<div id="saveContainer">
-							<button id="save" style="display: none;">Save Comments</button>
-						</div>
-						<br>
-
-						<!-- Refresh Section -->
-						<div id="refreshContainer" style="display: none;">
-							<p class="centered-text">Voice comments saved</p>
-							<p class="centered-text">
-								Refresh page to view:
-								<button id="refresh"><i class="fas fa-redo"></i></button>
-							</p>
-							<br>
-						</div>
-
-						<!-- Saved Voice Comments Section -->
-						<div id="voiceCommentLabel" class="centered-text">
-							<div id="collapseButton" class="collapse-button">
-								<i class="fas fa-chevron-right"></i>
-							</div>
-							&nbsp;Saved Voice Comments 
-						</div>
-						<div id="collapseMenu" class="collapse-menu" style="display: none;">
-							<div id="savedRecordings" data-saved="{{ listOfSavedComments|escapejs }}"></div>
-						</div>
-
+					<!-- Navigation pills for voice and text comments -->
+					<div class="nav nav-pills" id="comment-pills" role="tablist">
+						<a class="nav-link active navigation" id="voice-pill-tab" data-bs-toggle="pill" href="#voice-pill" role="tab" aria-controls="voice-pill" aria-selected="true">
+							Voice
+						</a>
+						<a class="nav-link navigation" id="text-pill-tab" data-bs-toggle="pill" href="#text-pill" role="tab" aria-controls="text-pill" aria-selected="false">
+							Text
+						</a>
 					</div>
+
+					<!-- Tab Content for voice and text comments -->
+					<div class="tab-content" id="comment-pills-tabContent">
+						<!-- Voice Comment tab -->
+						<div class="tab-pane fade show active" id="voice-pill" role="tabpanel" aria-labelledby="voice-pill-tab">
+							<div id="testComment" class="centered-text">Select a mark to leave a comment</div>
+							<div id="voiceRecordContainer">
+
+								<!-- Voice Recording Section -->
+								<div id="voiceRecord">
+									<div id="playCircle">
+										<i id="play" class="fas fa-play" title="Start Recording"></i>
+									</div>
+									<div title="Recording...">
+										<div class="animation-block block-1"></div>
+										<div class="animation-block block-2"></div>
+										<div class="animation-block block-3"></div>
+									</div>
+								</div>
+
+								<!-- Current Voice Comments Section -->
+								<div id="recordings"></div>
+								<div id="saveContainer">
+									<button id="save" style="display: none;">Save Comments</button>
+								</div>
+								<br>
+
+								<!-- Refresh Section -->
+								<div id="refreshContainer" style="display: none;">
+									<p class="centered-text">Voice comments saved</p>
+									<p class="centered-text">
+										Refresh page to view:
+										<button id="refresh"><i class="fas fa-redo"></i></button>
+									</p>
+									<br>
+								</div>
+
+								<!-- Saved Voice Comments Section -->
+								<div id="voiceCommentLabel" class="centered-text">
+									<div id="collapseButton" class="collapse-button">
+										<i class="fas fa-chevron-right"></i>
+									</div>
+									&nbsp;Saved Voice Comments 
+								</div>
+								<div id="collapseMenu" class="collapse-menu" style="display: none;">
+									<div id="savedRecordings" data-saved="{{ listOfSavedComments|escapejs }}"></div>
+								</div>
+
+							</div>
+						</div>
+
+						<!-- Text Comment tab -->
+						<div class="tab-pane fade" id="text-pill" role="tabpanel" aria-labelledby="text-pill-tab">
+							A
+							<!-- Here is where the HTML for text comments can go -->
+						</div>
+					</div>
+
                 </div>
 
 				<div id="bookmarksView">
@@ -743,6 +768,7 @@
 <script src="{% static 'js/viewer.js'%}"></script>
 <script src="{% static 'js/viewer_sidebar.js' %}"></script>
 <script src="{% static 'js/voice_comments_menu.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js" integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u" crossorigin="anonymous"></script>
 </body>
 </html>
 
