update the new version style of dashboard

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
+/*@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);*/
 
 /*.get-start {*/
 /*    margin-bottom: 40px;*/
@@ -156,3 +156,4 @@ animation: slideIn 0.5s ease-in-out;
     flex: 0 0 auto;
     width: auto;
 }
+
