--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
-    <title>Task Manager</title>
+    <title>PDF Voice Comment</title>
   </head>
   <body class="{{user.theme_preference}}">
   </body>
