Add leave team function -delete the team without members -refactor seeder -modify login page

--- a/static/css/login_and_signup.css
+++ b/static/css/login_and_signup.css
@@ -55,6 +55,9 @@ img {
     justify-content: space-between;
     align-self: stretch;
     border-radius: .5rem;
+    height: 80%;
+    margin-bottom: auto;
+    margin-top: auto;
 }
 
 h1 {
