--- a/tasks/templates/upload_file.html
+++ b/tasks/templates/upload_file.html
@@ -2,12 +2,11 @@
 {% block content %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static '/css/upload_file.css' %}">
-<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 <script src="{% static '/js/upload_file.js' %}"></script>
 
 <div class="relative min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8 relative items-center" style="background-color: white">
-	<div class="absolute bg-black opacity-5 inset-0 z-0"></div>
-	<div class="sm:max-w-lg w-full p-10 bg-white rounded-xl z-10">
+	<div class="absolute bg-dark-subtle inset-0 z-0"></div>
+	<div class="sm:max-w-lg w-full p-10 rounded-xl z-10">
 		<div class="text-center">
 			<h2 class="mt-5 text-3xl font-bold text-gray-900">
 				Upload
