--- a/static/css/upload_file.css
+++ b/static/css/upload_file.css
@@ -1,61 +1,41 @@
-/*.table-container {*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    width: 80%;*/
-/*    height: 80%;*/
-/*}*/
+.table-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 80%;
+}
 
-/*.header-bar{*/
-/*    box-sizing: border-box;*/
-/*    padding: 0; margin: 0;*/
-/*    font: 300 1em/1.5 'Open Sans', 'Helvetica Neue', Arial, sans-serif;*/
-/*    text-decoration: none;*/
-/*    color: #111;*/
-/*}*/
+.header-bar{
+    box-sizing: border-box;
+    padding: 0; margin: 0;
+    font: 300 1em/1.5 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+    text-decoration: none;
+    color: #111;
+}
 
-/*.pdf-table {*/
-/*    width: 80%;*/
-/*    height: 80%;*/
-/*}*/
-
-/*.pdf-upload-area {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    align-items: center;*/
-/*    padding: 120px;*/
-/*    border-width: 3px;*/
-/*    border-radius: 10px;*/
-/*    border-color: rgb(236,138,164);*/
-/*    border-style: dashed;*/
-/*    background-color: rgb(250, 250, 250);*/
-/*    color: rgb(189, 189, 189);*/
-/*    outline: none;*/
-/*    transition: border 0.24s ease-in-out 0s;*/
-/*    cursor: pointer;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    max-width: 100%;*/
-/*    max-height: 100%;*/
-/*    box-sizing: border-box;*/
-/*    overflow: auto;*/
-/*}*/
+.pdf-table {
+    width: 80%;
+    height: 80%;
+}
 
 
-/*.table-container .section input[type='file'] {*/
-/*    display: none;*/
-/*}*/
 
-/*.table-container .section .flex {*/
-/*    width: 70px;*/
-/*    height: 70px;*/
-/*    overflow: hidden;*/
-/*}*/
 
-/*.table-container .section .icon {*/
-/*    max-width: 100%;*/
-/*    max-height: 100%;*/
-/*}*/
+.table-container .section input[type='file'] {
+    display: none;
+}
+
+.table-container .section .flex {
+    width: 70px;
+    height: 70px;
+    overflow: hidden;
+}
+
+.table-container .section .icon {
+    max-width: 100%;
+    max-height: 100%;
+}
 
 .uploaded-file {
     display: flex;
