--- a/tasks/templates/partials/navbar.html
+++ b/tasks/templates/partials/navbar.html
@@ -1,6 +1,10 @@
+{% block content %}
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static '/css/navbar.css' %}">
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="{% url 'dashboard' %}">
+    <a class="navbar-brand navbar-brand-left" href="{% url 'dashboard' %}">
       Crimson PDF 
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,3 +15,5 @@
     {% endif %}
   </div>
 </nav>
+    
+{% endblock %}
