--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -26,7 +26,7 @@
                         <div class="col-sm-6 col-md-4 col-lg-3 mb-2 fade-in">
                             <div class="text-center">
                                 <img src="{{ member.avatar_url }}" class="rounded-circle medium-image"
-                                     alt="Avatar of {{ member.username }}">
+                                     alt="Avatar of {{ member.username }}" style="margin: auto"> {#add margin, since the image is not centered with no reason#}
                             </div>
                             <div class="row text-center">
                                 <span class="team-text">{{ member.username }}</span>
