change the default text

--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -107,8 +107,9 @@
 
 						<!-- Text Comment tab -->
 						<div class="tab-pane fade" id="text-pill" role="tabpanel" aria-labelledby="text-pill-tab">
-							A
+							Select a mark to leave a comment
 							<!-- Here is where the HTML for text comments can go -->
+                            
 						</div>
 					</div>
 
