--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -26,7 +26,8 @@
                         <div class="col-sm-6 col-md-4 col-lg-3 mb-2 fade-in">
                             <div class="text-center">
                                 <img src="{{ member.avatar_url }}" class="rounded-circle medium-image"
-                                     alt="Avatar of {{ member.username }}" style="margin: auto"> {#add margin, since the image is not centered with no reason#}
+                                     alt="Avatar of {{ member.username }}" style="margin: auto">
+                                {#add margin, since the image is not centered with no reason#}
                             </div>
                             <div class="row text-center">
                                 <span class="team-text">{{ member.username }}</span>
@@ -67,9 +68,9 @@
                     <div class="text-center team-text mt-2 action-button">
                         <a class="action-link" href="{% url 'team_leave' team_id=team.id %}">Leave Team</a>
                     </div>
-                    <div class="text-center team-text mt-2 action-button">
-                        <a class="action-link" data-bs-toggle="offcanvas"
-                           data-bs-target="#uploadTeamPdf" aria-controls="uploadTeamPdf">Generate Invitation Code</a>
+                    <div class="text-center team-text mt-2 action-button"
+                         onclick="copyInvitationCode('{{ team.invitation_code }}')">
+                        <a class="action-link">Generate Invitation Code</a>
                     </div>
                 </div>
             </div>
@@ -176,4 +177,13 @@
     </div>
 
     <script src="{% static 'js/popup_window.js' %}"></script>
+    <script>
+        function copyInvitationCode(invitationCode) {
+            navigator.clipboard.writeText(invitationCode).then(function () {
+                alert('Invitation code copied to clipboard: ' + invitationCode);
+            }, function (err) {
+                console.error('Failed to copy invitation code: ', err);
+            });
+        }
+    </script>
 {% endblock %}
