implement sharing on upload page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -335,6 +335,11 @@ Fade in transition
     width: 70px;
 }
 
+.medium-small-image{
+    height: 45px;
+    width: 45px;
+}
+
 .small-image{
     height: 20px;
     width: 20px;
