--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -1,4 +1,3 @@
-/*viewer.css*/
 * {
     padding: 0;
     margin: 0;
@@ -23,7 +22,7 @@ body {
 #mainContainer {
     position: absolute;
     inset: 0;
-	overflow: auto;
+    overflow: auto;
 }
 
 /* Sidebar */
@@ -31,7 +30,7 @@ body {
     position: absolute;
     inset: 32px 0 0;
     height: 100%;
-    width: 250px;
+    width: 400px;
     z-index: 100;
     background-color: #ECEFF4;
 }
@@ -49,7 +48,7 @@ body {
 #sidebarViews {
 	position: absolute;
 	inset: 32px 0 0 0;
-	/*overflow: auto;*/
+	overflow: auto;
     display: flex; /* Use flexbox */
     justify-content: center; /* Center horizontally */
 }
@@ -75,10 +74,6 @@ body {
 .toolbarSection {
     display: flex;
     flex-direction: row;
-}
-
-#pageInput {
-	width: 40px
 }
 
 /* Viewer */
@@ -154,24 +149,17 @@ body {
 }
 
 #markButton {
-	height: 28px;
-	width: 45px;
-	font-size: 16px;
 	margin: auto;
 	z-index: 3; /*needs to be higher z index so that it is easy to click*/
 }
 
 /*Thumbnails view*/
-#thumbnailView {
-	overflow-y: auto;
-}
-
 .thumbnailContainer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin: 10px;
-	width: 230px;
+	width: 270px;
 	background-color: transparent;
 }
 
@@ -210,15 +198,114 @@ body {
   background-color: #f5f5f5;
 }
 
-/* Navigation pills */
-#comment-pills {
-	display: flex;
-	justify-content: center;
-	margin-top: 8px;
-	margin-bottom: 8px;
+.toggleContainer {
+	text-align: center;
+	margin-top: 50px;
 }
-.navigation {
-	margin: 4px;
-	padding: 8px 36px !important;
+.toggle-button{
+	padding: 10px 20px;
+	background-color: #fff;
+	color: #000;
+	border: none;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: all 0.3s ease;
 }
 
+.input-box{
+	padding: 10px 20px;
+	background-color: #fff;
+	color: #000;
+	border: none;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: all 0.3s ease;
+
+}
+.toggle-button {
+	display: inline-block;
+}
+.input-box {
+	display: none;
+}
+
+:root {
+	--secondary-color: #422C73;
+}
+
+/* Right sidebar */
+#rightSidebar {
+    position: fixed;
+    top: 200px; /* Adjust as needed */
+    right: 0;
+    width: auto; /* Adjust width as needed */
+    height: auto;
+    background-color: #25D831;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+	border-radius: 30px
+}
+
+#rightSidebar a {
+    font-size: 20px;
+    color: #fff;
+    text-decoration: none;
+    padding: 20px;
+    text-align: center;
+}
+
+.offcanvas {
+	padding: 10px;
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.input-box{
+	width: auto;
+	height: auto;
+}
+
+.commentContainer{
+	width: auto;
+	height: auto;
+	padding : 3px;
+}
+
+.text-comment {
+    max-width: 200px;
+    margin: auto;
+}
+
+.card {
+    width: 100%;
+}
+
+.card-img-top {
+    max-width: 10%;
+    height: auto;
+}
+
+.card-body {
+    padding: 5px; /* Add padding to the card-body */
+}
+
+textarea {
+    width: calc(100% - 10px); /* Adjusted width considering padding */
+    height: 100px;
+    padding: 5px; /* Padding to match card-body padding */
+    resize: both;
+    overflow: auto;
+    box-sizing: border-box; /* Include padding and border in the width */
+}
+
+.card-footer {
+    display: flex;
+    justify-content: flex-end; /* Align items to the right */
+}
