--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -40,7 +40,7 @@
 				<div id="thumbnailView">
                     <div id="thumbnailsContainer" role="tablist" aria-label="Thumbnail Tabs"></div>
                 </div>
-				
+
 				<div id="outlineView"></div>
 
 				<div id="commentView">
@@ -96,7 +96,7 @@
 									<div id="collapseButton" class="collapse-button">
 										<i class="fas fa-chevron-right"></i>
 									</div>
-									&nbsp;Saved Voice Comments 
+									&nbsp;Saved Voice Comments
 								</div>
 								<div id="collapseMenu" class="collapse-menu" style="display: none;">
 									<div id="savedRecordings" data-saved="{{ listOfSavedComments|escapejs }}"></div>
@@ -107,8 +107,12 @@
 
 						<!-- Text Comment tab -->
 						<div class="tab-pane fade" id="text-pill" role="tabpanel" aria-labelledby="text-pill-tab">
-							Select a mark to leave a comment
-							<!-- Here is where the HTML for text comments can go -->
+                            <button class="btn-primary" id="addCommentBtn" onclick="addComment()">+Add Note</button>
+                            <div class="input-group mb-3" id="inputText" style="display: none">
+                                <textarea id="textArea" type="text" class="form-control" style="width: auto" placeholder="Add your text comment here..."></textarea>
+                                <button class="btn-primary" onclick="saveComment()">save</button>
+                            </div>
+                            <div id="commentsContainer"></div>
                             
 						</div>
 					</div>
@@ -123,18 +127,18 @@
 
 		<!-- Main Container -->
 		<div id="mainContainer">
-			
+
 			<!-- Toolbar -->
 			<div id="toolbar" style="position: sticky; top: 0; z-index: 1000;">
-			
+
 				<!-- Toolbar Sections -->
 				<div id="toolbarSections">
-				
+
 					<!-- Left Toolbar Section -->
 					<div id="toolbarLeft" class="toolbarSection">
 						<button id="sidebarToggle" class="toolbarButton toggled" title="Toggle Sidebar">
 							<i class="fa-solid fa-bars"></i>
-						</button>		
+						</button>
 						<button id="previousPage" class="toolbarButton" title="Previous Page">
 							<i class="fa-solid fa-arrow-up"></i>
 						</button>
@@ -144,7 +148,7 @@
 						<input id="pageInput" class="toolbarField" title="Page" value="1"></input>
 						<span id="numberPages" class="toolbarLabel">of 0</span>
 					</div>
-					
+
 					<!-- Middle Toolbar Section -->
 					<div id="toolbarMiddle" class="toolbarSection">
 						<div id="titleContainer">
@@ -153,12 +157,12 @@
 							<div id="fileName">{{upload.file.name}}</div>
 						</div>
 					</div>
-					
+
 					<!-- Right Toolbar Section -->
-					<div id="toolbarRight" class="toolbarSection">	
+					<div id="toolbarRight" class="toolbarSection">
 						<button id="markButton" type="button" hidden="True">
 							Mark
-						</button>		
+						</button>
 						<select id="selectScale" class="toolbarSelect" title="Zoom">
 							<option id="pageFit" value="fit">Fit Page</option>
         	                        		<option id="pageWidth" value="width">Fit Width</option>
@@ -170,8 +174,8 @@
 	                                		<option value="2">200%</option>
         	                        		<option value="3">300%</option>
                 	                		<option value="4">400%</option>
-						</select>	
-						
+						</select>
+
 						<!-- Search section -->
 						<button id="prevSearchResult" class="toolbarButton" title="Previous Search Result">
 							<i class="fa-solid fa-arrow-left"></i>
@@ -191,7 +195,7 @@
 					</div>
 				</div>
 			</div>
-		
+
 			<!-- PDF Viewer -->
 			<div id="viewer">
 				<div id="container">
@@ -202,7 +206,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<script type="module">
 		import * as pdfjsLib from 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.0.379/pdf.min.mjs';
 
@@ -235,22 +239,22 @@
 		// Global variables
 		var pdf;
 		var numPages;
-		
+
 		document.addEventListener("DOMContentLoaded", async function() {
-			pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.0.379/pdf.worker.min.mjs';	
+			pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.0.379/pdf.worker.min.mjs';
 			const loadingTask = pdfjsLib.getDocument(pdfUrl);
 			pdf = await loadingTask.promise;
 			numPages = pdf.numPages;
 
 			/// Add events ///
-			
+
 			// Zooming
 			var selectScale = document.getElementById("selectScale");
 				selectScale.addEventListener("change", function() {
 					var selectedValue = parseFloat(selectScale.value); // Get the selected option value
-					
+
 					// Get the original percentage
-					const yOriginalPercentage = viewer.scrollTop / viewer.scrollHeight; 
+					const yOriginalPercentage = viewer.scrollTop / viewer.scrollHeight;
                     const xOriginalPercentage = viewer.scrollLeft / viewer.scrollWidth
 
                     // If the value is "width" or "page"
@@ -269,7 +273,7 @@
 			const pageMax = document.getElementById("numberPages")
 			pageMax.textContent = "of " + numPages;
 
-			pageInput.addEventListener("input", function validatePageInput (event) 
+			pageInput.addEventListener("input", function validatePageInput (event)
 			{
 				const inputValue = event.target.value;
 				const numbersOnly = /^\d*$/; // Regex to match numbers only
@@ -285,10 +289,10 @@
 				}
 			});
 
-			pageInput.addEventListener("keyup", async function finalizeInput(event) 
+			pageInput.addEventListener("keyup", async function finalizeInput(event)
 			{
 				// Check if Enter key was pressed
-				if (event.key === "Enter") {	
+				if (event.key === "Enter") {
 					let pageNum = parseInt(event.target.value);
 					await navigateToPage(pdf, pageNum)
 					pageInput.blur(); // Remove focus onto input field
@@ -319,14 +323,14 @@
 			/// Setup
 
 			let yPos = 0 // Keep this for now (Vincent's stuff)
-			
+
 			// Work out required canvas width and height
 			for (let pageNumber = 1; pageNumber <= numPages; pageNumber++) {
 				const page = await pdf.getPage(pageNumber);
 				const viewport = page.getViewport({scale: baseRenderQuality * resolution});
 				const pageWidth = viewport.width;
 				const pageHeight = viewport.height;
-	
+
 				// Calculate total height required to display all pages, and max width
 				totalHeight += pageHeight + pageSpacing;
 				maxWidth = Math.max(maxWidth, pageWidth);
@@ -347,7 +351,7 @@
 			/*
 			canvasContainer.style.width = maxWidth / renderQuality + "px";
 			canvasContainer.style.height = totalHeight / renderQuality + "px";
-			
+
 			textLayerContainer.style.width = maxWidth / renderQuality + "px";
         	textLayerContainer.style.height = totalHeight / renderQuality + "px";
 			*/
@@ -365,7 +369,7 @@
 			if (!pagesRendered.has(pageNum))
 			{
 				pagesRendered.add(pageNum);
-				await renderPage(pdf, pageNum);	
+				await renderPage(pdf, pageNum);
 			}
 			let pageCanvas = document.getElementById("page" + pageNum);
 			viewer.scrollTop = pageCanvas.offsetTop;
@@ -375,7 +379,7 @@
 		var isRendering = false // Keeps track of rendering process
 
         /* Rendering related function */
-		
+
 		window.addEventListener("resize", async function()
 		{
 			// Render asynchronously
@@ -391,7 +395,7 @@
 		{
 			// Exit if rendering is taking place
 			if (isRendering) return;
-			
+
 			// Render asynchronously
 			setTimeout(async () => {
 				isRendering = true;
@@ -400,23 +404,23 @@
 			}, 0);
 		});
 
-		async function renderVisiblePages() 
+		async function renderVisiblePages()
 		{
 			// Work out adjacent areas around viewer
-			let averagePageHeight = totalHeight / numPages; 
+			let averagePageHeight = totalHeight / numPages;
 			const viewerHeight = viewer.clientHeight;
 			const scrollTop = (viewer.scrollTop - viewerHeight * 5) * renderQuality;
 			const scrollBottom = (viewer.scrollTop + viewerHeight * 5) * renderQuality;
 
 			let topPage = Math.floor(scrollTop / averagePageHeight) + 1;
 			let bottomPage = Math.floor(scrollBottom / averagePageHeight) + 1;
-			
-			// Makes sure indexes aren't outside range of (1, pdf pages) 
-			topPage = topPage > 1 ? topPage : 1; 
-			bottomPage = bottomPage < numPages ? bottomPage : numPages; 
+
+			// Makes sure indexes aren't outside range of (1, pdf pages)
+			topPage = topPage > 1 ? topPage : 1;
+			bottomPage = bottomPage < numPages ? bottomPage : numPages;
 			currentPage = Math.floor((topPage + bottomPage) / 2);
 
-			// Render visible pages 
+			// Render visible pages
 			for (let pageNumber = topPage; pageNumber <= bottomPage; pageNumber++) {
 				if (!pagesRendered.has(pageNumber)) {
 					pagesRendered.add(pageNumber);
@@ -426,8 +430,8 @@
 			}
 		}
 
-		async function renderPage(pdf, pageNumber) 
-		{	
+		async function renderPage(pdf, pageNumber)
+		{
 			const page = await pdf.getPage(pageNumber);
 			const viewport = page.getViewport({scale: baseRenderQuality * resolution});
 
@@ -448,8 +452,8 @@
 			// Position the canvas in the right place
 			canvas.style.position = 'absolute'
 			canvas.style.margin = "auto";
-			canvas.style.top = (viewport.offsetY + viewport.height * (pageNumber - 1)) / renderQuality + 'px';			
-			
+			canvas.style.top = (viewport.offsetY + viewport.height * (pageNumber - 1)) / renderQuality + 'px';
+
 			canvasContainer.appendChild(canvas);
 			let context = canvas.getContext("2d");
 
@@ -482,8 +486,8 @@
 				viewport: viewport,
 				textDivs: []
 			}).promise;
-				
-			//yPos += pageHeight + pageSpacing; // Update the ypos to move the pages down	
+
+			//yPos += pageHeight + pageSpacing; // Update the ypos to move the pages down
 
 		}
 
@@ -528,8 +532,8 @@
 			}
 
 			pagesRendered.clear(); // Empty set of rendered pages
-				
-			// Update scaling 
+
+			// Update scaling
 			let newResolution = renderQuality * zoomScale;
 			maxWidth =  (maxWidth / resolution) * newResolution;
 			totalHeight = (totalHeight / resolution) * newResolution;
@@ -770,6 +774,6 @@
 <script src="{% static 'js/viewer_sidebar.js' %}"></script>
 <script src="{% static 'js/voice_comments_menu.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js" integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 </html>
-
