--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -775,5 +775,6 @@
 <script src="{% static 'js/voice_comments_menu.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js" integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>var comments = JSON.parse('{{ comments_json|escapejs }}');</script>
 </body>
 </html>
